--- a/Tareas/Tarea1/index.html
+++ b/Tareas/Tarea1/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h2>Aspiradora Inteligente</h2>
+<h2>Aspiradora Inteligente 2.0</h2>
 <p id="log"></p>
 <script type="text/javascript" src="aspiradora.js"></script>
 </body>
